<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/addMeetingActivity"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/linkEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Meeting Link"
        android:padding="16dp" />

    <EditText
        android:id="@+id/topicEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Topic"
        android:padding="16dp"
        android:layout_below="@id/linkEditText" />

    <EditText
        android:id="@+id/timeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Time"
        android:padding="16dp"
        android:layout_below="@id/topicEditText" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Location"
        android:padding="16dp"
        android:layout_below="@id/timeEditText" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/locationEditText"
        android:layout_centerHorizontal="true"
        android:text="Add Meeting" />
</RelativeLayout>
