<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/userOptionsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/userProfileButton"
        android:layout_width="wrap_content"
...
