<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registrationActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/detailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_alignParentTop="true">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/ageEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Age"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/languageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        android:layout_below="@id/detailsLayout">

        <CheckBox
            android:id="@+id/nativeEnglishSpeakerCheckbox"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Native English Speaker" />

        <CheckBox
            android:id="@+id/nativeSpanishSpeakerCheckbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Non-Native Speaker" />
    </LinearLayout>

    <TextView
        android:id="@+id/interestsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Interests"
        android:textSize="18sp"
        android:layout_margin="16dp"
        android:padding="2dp"
        android:layout_below="@id/languageLayout"
        android:layout_alignParentStart="true" />

    <GridLayout
        android:id="@+id/interestsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="4"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_below="@id/interestsText">

        <CheckBox
            android:id="@+id/sportsCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sports" />

        <CheckBox
            android:id="@+id/moviesCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Movies" />

        <CheckBox
            android:id="@+id/musicCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Music" />

        <CheckBox
            android:id="@+id/readingCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reading" />

        <CheckBox
            android:id="@+id/cookingCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cooking" />

        <CheckBox
            android:id="@+id/travelCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Travel" />

        <CheckBox
            android:id="@+id/artCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Art" />

        <CheckBox
            android:id="@+id/gamingCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gaming" />

        <CheckBox
            android:id="@+id/fitnessCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fitness" />

        <CheckBox
            android:id="@+id/photographyCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Photography" />

        <CheckBox
            android:id="@+id/technologyCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Technology" />

        <CheckBox
            android:id="@+id/fashionCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fashion" />
    </GridLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
